--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,6 +34,7 @@
                         <div class="ml-auto">
 
                             <a href="/login" th:if="${session.loginUser == null }" class="btn btn-outline rounded-pill">로그인</a>
+                            <a th:href="@{/users}" th:if="${session.loginUser != null}" class="btn btn-outline rounded-pill">마이페이지</a>
                             <form th:action="@{/logout}" method="post" th:if="${session.loginUser != null}">
                                 <button type="submit"  class="btn btn-outline rounded-pill">로그아웃</button>
                             </form>
