--- a/src/main/resources/templates/order/orderList.html
+++ b/src/main/resources/templates/order/orderList.html
@@ -12,12 +12,16 @@
                         <th>주문상태</th>
                         <th>주문정보</th>
                         <th>주문자</th>
+                        <th>주문취소</th>
                     </tr>
                     <tr th:each="order : ${orderList}">
                         <td th:text="${order.getOrder().getOrderDate()}"></td>
                         <td th:text="${order.getOrder().getStatus()}"></td>
                         <td th:text="${order.getProduct().getPdct_name() + '/' + order.getOd_quantity() + '개'}"></td>
                         <td th:text="${order.getOrder().getUser().getUser_name()}"></td>
+                        <td>
+                            <a th:if="${order.getOrder().getStatus().name() == 'ORDER'}" href="#" th:href="'javascript:orderCancel('+ ${order.getOrder().getId()} + ')'" class="btn-danger">주문취소</a>
+                        </td>
                     </tr>
                 </table>
             </div>
@@ -25,4 +29,17 @@
         </div>
 
     </div>
+
+    <script th:inline="javascript">
+        function orderCancel(order_id){
+         if (confirm("주문을 취소하시겠습니까?") == true){
+             var cancelForm = document.createElement("form");
+             cancelForm.setAttribute("method", "post");
+             cancelForm.setAttribute("action", "/orders/" + order_id + "/cancel");
+             document.body.appendChild(cancelForm);
+             cancelForm.submit();
+         }
+
+        }
+    </script>
 </main>
