--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
                                 <a href="/item" class="nav-link">Item</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/item/new" class="nav-link">Upload</a>
+                                <a href="#" id="upload" th:href="'javascript:upload('+${session.size()}+')'" class="nav-link">Upload</a>
                             </li>
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
@@ -39,9 +39,21 @@
                     </div>
                 </div>
             </nav>
-
-
         </header>
+
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            function upload(loginUser){
+                var uploadPage = "http://localhost:8080/item/new";
+
+                if(loginUser == 0){
+                    alert("로그인 후 이용해주세요");
+                }else if(loginUser > 0){
+                    location.href="http://localhost:8080/item/new";
+                }
+            }
+            /*]]*/
+        </script>
 
     </th:block>
 </html>
