--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -12,6 +12,9 @@
                     <div class="col-sm-5 login-id">
                         <a th:href="@{/orderList/} + ${session.loginUser.getUser_id()}" class="btn btn-primary col-md-12">주문 내역</a>
                     </div>
+                    <div class="col-sm-5 login-id">
+                        <a th:href="@{/question/} + ${session.loginUser.getUser_id()}" class="btn btn-primary col-md-12">문의 내역</a>
+                    </div>
                 </div>
             </form>
         </div>
