--- a/src/main/resources/templates/login/join.html
+++ b/src/main/resources/templates/login/join.html
@@ -37,9 +37,9 @@
 
 
 
-          <div class="col-sm-5 login-id">
-            <input type="text" class="form-control" th:field="*{zipcode}" placeholder="우편번호">
-            <input type="button" onclick="addressApi()" value="우편번호 찾기">
+          <div class="col-sm-5 login-id row pr-0">
+            <input type="text" class="form-control col-sm-7" th:field="*{zipcode}" placeholder="우편번호">
+            <input type="button" onclick="addressApi()" class="btn btn-primary col-sm-4 ml-4 mr-0" value="우편번호 찾기">
           </div>
           <div class="col-sm-5 login-id">
             <input type="text" class="form-control" th:field="*{city}" placeholder="도로명">
