회원가입 페이지 배치 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
 
         <div class="col-md-6 col-lg-4 py-3 pl-5  wow fadeInUp">
           <div class="d-flex flex-row">
-            <div class="img-fluid">
+            <div class="img-fluid mr-3">
               <img src="/img/index/kakaopay.jfif" width="150" height="150" alt="">
             </div>
             <div>
@@ -71,8 +71,8 @@
   <div class="page-section">
     <div class="container">
       <div class="text-center wow fadeInUp">
-        <div class="subhead">Why Choose Us</div>
-        <h2 class="title-section">Your <span class="marked">Comfort</span> is Our Priority</h2>
+        <div class="subhead">This week</div>
+        <h2 class="title-section"><span class="marked">Recommended </span> products</h2>
         <div class="divider mx-auto"></div>
       </div>
 
