--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
                     <div class="container">
                         <div class="row justify-content-center mb-5">
                             <div class="col-lg-3 py-3">
-                                <h3>Digi<span class="text-primary">Gram.</span></h3>
+                                <h3><span class="text-primary">Good</span>Shop.</h3>
                                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 
                                 <p><a href="#" >digigram@mail.com</a></p>
