상품 리뷰 개발

--- a/src/main/resources/templates/menu/product/newitem.html
+++ b/src/main/resources/templates/menu/product/newitem.html
@@ -24,11 +24,11 @@
                         <p th:if="${#fields.hasErrors('pdct_image')}" th:errors="*{pdct_image}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
-                        <input type="file" class="form-control" th:field="*{detail_image}" th:placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
+                        <input type="file" class="form-control-file" th:field="*{detail_image}" th:placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('detail_image')}" th:errors="*{detail_image}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
-                        <input type="text" class="form-control" th:field="*{pdct_detail}" th:placeholder="상세설명" th:class="${#fields.hasErrors('pdct_detail')}  ? 'form-control fieldError' : 'form-control'">
+                        <input type="text" class="form-control-file" th:field="*{pdct_detail}" th:placeholder="상세설명" th:class="${#fields.hasErrors('pdct_detail')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_detail')}" th:errors="*{pdct_detail}">Incorrect date</p>
                     </div>
                     <div class="col-sm-5 login-id">
