--- a/src/main/resources/templates/menu/product/product_detail.html
+++ b/src/main/resources/templates/menu/product/product_detail.html
@@ -46,7 +46,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <div class="mb-5">status
+                            <div class="mb-5">
                                 <button type ="button" onclick="count('plus');">+</button>
                                 <input type="text" id="pdct_quantity" name="pdct_quantity" th:value="1" readonly="readonly" style="text-align:center;"/>
                                 <button type="button" onclick="count('minus');">-</button>
