--- a/src/main/resources/templates/login/join.html
+++ b/src/main/resources/templates/login/join.html
@@ -38,17 +38,20 @@
 
 
           <div class="col-sm-5 login-id row pr-0">
-            <input type="text" class="form-control col-sm-7" th:field="*{zipcode}" placeholder="우편번호">
+            <input type="text" th:field="*{zipcode}" placeholder="우편번호" th:class="${#fields.hasErrors('user_id')} ? 'form-control col-sm-7 fieldError' : 'form-control col-sm-7'">
             <input type="button" onclick="addressApi()" class="btn btn-primary col-sm-4 ml-4 mr-0" value="우편번호 찾기">
+            <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}">Incorrect date</p>
           </div>
           <div class="col-sm-5 login-id">
-            <input type="text" class="form-control" th:field="*{city}" placeholder="도로명">
+            <input type="text" class="form-control" th:field="*{city}" placeholder="도로명" th:class="${#fields.hasErrors('user_id')} ? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}">Incorrect date</p>
           </div>
           <div class="col-sm-5 login-id">
-            <input type="text" class="form-control" th:field="*{street}" placeholder="상세주소">
+            <input type="text" class="form-control" th:field="*{street}" placeholder="상세주소" th:class="${#fields.hasErrors('user_id')} ? 'form-control fieldError' : 'form-control'">
+            <p th:if="${#fields.hasErrors('street')}" th:errors="*{street}">Incorrect date</p>
           </div>
           <div class="col-sm-5 login-id">
-            <input type="text" class="form-control" id="sample6_extraAddress" placeholder="참고항목">
+            <input type="text" class="form-control" id="sample6_extraAddress" placeholder="참고항목" th:class="${#fields.hasErrors('user_id')} ? 'form-control fieldError' : 'form-control'">
           </div>
 
 
