--- a/src/main/resources/templates/menu/item.html
+++ b/src/main/resources/templates/menu/item.html
@@ -10,7 +10,7 @@
             <div class="row align-items-center">
               <div class="col-md-6 py-3">
                 <div class="testi-image">
-                  <img th:src="|/images/${product.getPdct_image()}|" alt="" >
+                  <img th:src="|/images/${product.getPdct_image()}|" width="300" alt="" >
                 </div>
               </div>
               <div class="col-md-3 py-3">
