--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
                                 <a href="#" id="upload" th:href="'javascript:upload('+${session.size()}+')'" class="nav-link">Upload</a>
                             </li>
                             <li class="nav-item">
-                                <a href="contact.html" class="nav-link">Contact</a>
+                                <a href="#" th:href="'javascript:contact('+${session.size()}+')'" class="nav-link">Contact</a>
                             </li>
                         </ul>
 
@@ -44,6 +44,16 @@
         <script th:inline="javascript">
             /*<![CDATA[*/
             function upload(loginUser){
+                var uploadPage = "http://localhost:8080/item/new";
+
+                if(loginUser == 0){
+                    alert("로그인 후 이용해주세요");
+                }else if(loginUser > 0){
+                    location.href="http://localhost:8080/item/new";
+                }
+            }
+
+            function contact(loginUser){
                 var uploadPage = "http://localhost:8080/item/new";
 
                 if(loginUser == 0){
